--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "license": "MIT",
   "description": "Vue.JS + Parcel test",
   "repository": "git@github.com:mibsbalsante/wtm-vue-parcel.git",
-  "author": "Mibs Balsante <mibsbalsante@ckl.io>"
+  "author": "Mibs Balsante <mibsbalsante@ckl.io>",
+  "scripts": {
+    "dev": "parcel index.js",
+    "build": "parcel build index.js"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.11.0"
+  }
 }
