chore: add prettier dependency and config

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.3.1",
     "@vue/component-compiler-utils": "^2.5.2",
     "parcel-bundler": "^1.11.0",
+    "prettier": "1.16.4",
     "vue-template-compiler": "^2.6.6"
   },
   "dependencies": {
